--- a/ContosoUniversity/Views/Course/Index.cshtml
+++ b/ContosoUniversity/Views/Course/Index.cshtml
@@ -12,10 +12,14 @@
 
 @using (Html.BeginForm())
 {
-    <p>
-        Select Department: @Html.DropDownList("SelectedDepartment", "All")
-        <input type="submit" value="Filter" />
-    </p>
+<p>
+    Select Department: @Html.DropDownList("SelectedDepartments", "All")
+
+    @*@Html.DropDownList("SelectedDepartment", (IEnumerable<SelectListItem>)ViewBag.SelectedDepartments, "All")*@
+
+    @Html.DropDownList("idOp", null, htmlAttributes: new { @class = "form-control" })
+    <input type="submit" value="Filter" />
+</p>
 }
 <table class="table">
     <tr>
